# nepomuk-core

./: .reviewboardrc  CMakeLists.txt  CTestConfig.cmake  Mainpage.dox  Nepomuk2AddOntologyClasses.cmake  NepomukCoreConfig.cmake.in  NepomukCoreConfigVersion.cmake.in  README  parser.cpp
autotests/: CMakeLists.txt  README
autotests/lib/: CMakeLists.txt  NepomukTestLibMacros.cmake.in  datagenerator.cpp  datagenerator.h  nepomukserverrc.in  nepomuktest_export.h  testbase.cpp  testbase.h
autotests/test/: CMakeLists.txt  asyncclientapitest.cpp  asyncclientapitest.h  backuptests.cpp  backuptests.h  qtest_querytostring.h  querylibtest.cpp  querylibtest.h  queryparsertest.cpp  queryparsertest.h  queryserializertest.h  queryservicetest.cpp  queryservicetest.h  querytests.cpp  querytests.h  queryupdatetests.cpp  queryupdatetests.h  resourcetests.cpp  resourcetests.h  simpleresourceclassestest.h  storeresourcesbenchmark.cpp  storeresourcesbenchmark.h
baloo/: CMakeLists.txt  main.cpp  nepomukbaloomigrator.desktop  systray.cpp  systray.h
cleaner/: CMakeLists.txt  Messages.sh  cleaningjob.cpp  cleaningjob.h  cleaningjobs.cpp  cleaningjobs.h  jobmodel.cpp  jobmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  nepomukcleaner.desktop  nepomukcleaningjob.desktop
includes/: CMakeLists.txt  CreateResourceJob  DataManagement  DescribeResourcesJob  File  Resource  ResourceManager  ResourceWatcher  Service  SimpleResource  SimpleResourceGraph  StoreResourcesJob  Tag  Thing  Variant  Version
includes/Query/: AndTerm  ComparisonTerm  CompletionProposal  FileQuery  GroupTerm  LiteralTerm  NegationTerm  OptionalTerm  OrTerm  Query  QueryParser  QueryServiceClient  ResourceTerm  ResourceTypeTerm  Result  ResultIterator  SimpleTerm  StandardQuery  Term
includes/Types/: Class  Literal  Ontology  Property
includes/Vocabulary/: NCAL  NCO  NDO  NEXIF  NFO  NIE  NMM  NMO  NUAO  PIMO  TMO
libnepomukcore/: CMakeLists.txt  Doxyfile.cmake  Mainpage.dox  Messages.sh  nepomuk_export.h  vocabulary.h
libnepomukcore/datamanagement/: createresourcejob.cpp  createresourcejob.h  datamanagement.cpp  datamanagement.h  datamanagementinterface.h  dbustypes.h  describeresourcesjob.cpp  describeresourcesjob.h  genericdatamanagementjob.cpp  genericdatamanagementjob_p.h  nepomukdatamanagement_export.h  resourcewatcher.cpp  resourcewatcher.h  simpleresource.cpp  simpleresource.h  simpleresourcegraph.cpp  simpleresourcegraph.h  storeresourcesjob.cpp  storeresourcesjob.h
libnepomukcore/misc/: nepomukversion.cpp  nepomukversion.h.cmake  utils.cpp  utils.h
libnepomukcore/query/: andterm.cpp  andterm.h  andterm_p.h  comparisonterm.cpp  comparisonterm.h  comparisonterm_p.h  dateparser.cpp  dateparser_p.h  dbusoperators.cpp  dbusoperators_p.h  filequery.cpp  filequery.h  groupterm.cpp  groupterm.h  groupterm_p.h  literalterm.cpp  literalterm.h  literalterm_p.h  negationterm.cpp  negationterm.h  negationterm_p.h  nepomukquery_export.h  optionalterm.cpp  optionalterm.h  optionalterm_p.h  orterm.cpp  orterm.h  orterm_p.h  query.cpp  query.h  query_p.h  querybuilderdata_p.h  queryparser.cpp  queryparser.h  queryserializer.cpp  queryserializer.h  queryserviceclient.cpp  queryserviceclient.h  queryserviceclient_p.h  resourceterm.cpp  (+18 more)
libnepomukcore/queryparser/: completionproposal.cpp  completionproposal.h  pass_comparators.cpp  pass_comparators.h  pass_dateperiods.cpp  pass_dateperiods.h  pass_datevalues.cpp  pass_datevalues.h  pass_decimalvalues.cpp  pass_decimalvalues.h  pass_filenames.cpp  pass_filenames.h  pass_filesize.cpp  pass_filesize.h  pass_numbers.cpp  pass_numbers.h  pass_periodnames.cpp  pass_periodnames.h  pass_properties.cpp  pass_properties.h  pass_splitunits.cpp  pass_splitunits.h  pass_subqueries.cpp  pass_subqueries.h  pass_typehints.cpp  pass_typehints.h  patternmatcher.cpp  patternmatcher.h  queryparser.cpp  queryparser.h  utils.cpp  utils.h
libnepomukcore/resource/: file.cpp  file.h  nepomukmainmodel.cpp  nepomukmainmodel.h  nepomukservice.h  resource.cpp  resource.h  resourcedata.cpp  resourcedata.h  resourcemanager.cpp  resourcemanager.h  resourcemanager_p.h  tag.cpp  tag.h  thing.cpp  thing.h  tools.cpp  tools.h  variant.cpp  variant.h
libnepomukcore/service/: nepomukservice.cpp  nepomukservice.desktop  nepomukservice.h  nepomukservice2.desktop  service2.cpp  service2.h  servicecontrol2.cpp  servicecontrol2.h
libnepomukcore/test/: CMakeLists.txt  dynamicresourcefacettest.cpp  facetmodeltest.cpp  proxyfacettest.cpp  qtest_querytostring.h  querylibtest.h  queryparsertest.cpp  queryserializertest.cpp  querytest.cpp  querytest.h  resourcetest.cpp  simplefacettest.cpp  simpleresourceclassestest.cpp  tagwidgettest.cpp  testbase.cpp  typefacettest.cpp
libnepomukcore/types/: class.cpp  class.h  class_p.h  entity.cpp  entity.h  entity_p.h  entitymanager.cpp  entitymanager.h  literal.cpp  literal.h  literal_p.h  ontology.cpp  ontology.h  ontology_p.h  property.cpp  property.h  property_p.h
rcgen/: CMakeLists.txt  codegenerator.cpp  codegenerator.h  nepomuk-simpleresource-rcgen.py  rcgen.cpp  safecode.cpp  safecode.h  templates.qrc
rcgen/templates/: header_safe.tpl  header_safe_nepomuk2.tpl  source_safe.tpl  source_safe_nepomuk2.tpl
services/fileindexer/: CMakeLists.txt  basicindexingqueue.cpp  basicindexingqueue.h  eventmonitor.cpp  eventmonitor.h  fileindexer.cpp  fileindexer.h  fileindexerconfig.cpp  fileindexerconfig.h  fileindexingjob.cpp  fileindexingjob.h  fileindexingqueue.cpp  fileindexingqueue.h  indexcleaner.cpp  indexcleaner.h  indexingqueue.cpp  indexingqueue.h  indexscheduler.cpp  indexscheduler.h  nepomukfileindexer.desktop  nepomukfileindexer.notifyrc  nepomukindexer.cpp  nepomukindexer.h  queues.cpp  queues.h  util.cpp  util.h  webminerindexingjob.cpp  webminerindexingjob.h  webminerindexingqueue.cpp  (+1 more)
test/: CMakeLists.txt  identificationtest.cpp  identificationtest.h  resourcetests.cpp  resourcetests.h
testlib/: CMakeLists.txt  README
tests/: CMakeLists.txt  querytester.cpp  querytester.h  querytester.ui
tools/: CMakeLists.txt  nepomukcmd.py  with-nepomuk-sandbox.sh.in
(+390 files in other folders)
